

Improved options handling

  * new function opts() to allow modification of plot options by addition
  * update(p, theme_bw) and p + theme_bw now work

These changes mean that you can modify plot options in the same way that you modify all other aspects of the plot, e.g.  qplot(mpg, wt, data=mptcars) + opts(title = "Fuel economy vs weight")


Improvements to coord_map to improve map projections

  * coord_map defaults to orientation = c(90, 0, mean(range(y))) - this ensures that multiple layers line up correctly, but means you will have to specify the orientation yourself for many projections 
  * coord_map now respects limits set by scales
  * removed useless ticks from coord_map

If you're using ggplot to draw maps and have thought of other features that would make your life easier, please let me know.


Bug fixes

  * adding data and aesthetics in separate steps should now work
  * layers with set parameters will not use mapped aesthetics
  * use LazyLoad: false instead of SaveData: true for better future compatability

  * coord_cartesian: fixed bug that prevented you from overriding the default axis expansion
  * geom_abline: fix bug where slope was ignored
  * geom_jitter now works correctly with groups and categorical values (was actually a bug in how scale_discrete deals with continuous values)
  * geom_path: automatically switch between polylineGrob and segmentsGrob when drawing paths so that setting line type now works properly
  * plotmatrix: fix bug in scatterplot matrix where all scatterplots were transposed!
  * qplot: should now work better within functions
  * quickplot added as an alias of qplot, to avoid confusion with qunif, etc
  * scale_*: better error message if you add a scale without a matching aesthetic mapping in the plot
  * scale_identity no longer converts everything to character
  * stat_*: made all statistics more robust to errors
  * stat_quantile: fixed bug when only drawing a single quantile